--- a/shopping-cart-exercise/src/App.css
+++ b/shopping-cart-exercise/src/App.css
@@ -1,8 +1,12 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1200px;
 }
 
 .products {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
